# Leonardo

./: ..env.swp  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
generation/: comfyui_client.py  hf_client.py  imagen_client.py
infra/: config.py  logger.py  vram_guard.py
metadata/: hashtags.py  tagger.py
parsers/: base.py  shutterstock.py
prompt_engine/: builder.py
scheduler/: pipeline.py
storage/: models.py  repository.py
storage/migrations/: 001_init.sql
tests/: test_generation.py
uploaders/: base.py  shutterstock.py
