[project]
name = "raphael"
version = "0.1.0"
description = "Auto photo stock promotion pipeline"
requires-python = ">=3.12"

dependencies = [
    "asyncpg>=0.29",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "playwright>=1.44",
    "arq>=0.26",
    "structlog>=24.2",
    "aiofiles>=23.2",
    "websockets>=12.0",
    "Pillow>=10.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
